--- a/src/css/login.css
+++ b/src/css/login.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../../assets/images/fondo.JPG') no-repeat;
+    background: url('../assets/images/fondo.JPG') no-repeat;
     background-size: cover;
     background-position: center;
     margin: 0;
@@ -59,7 +59,7 @@
 .input-box input {
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: rgba(255, 0, 0, 0.121);
     border: none;
     outline: none;
     border: 2px solid rgba(255, 255, 255, 0.127);
@@ -70,7 +70,8 @@
 }
 
 .input-box input::placeholder {
-    color: #ffff;
+    color: #ffffff;
+    
 }
 
 .input-box .icon {
